# Changelog for gitlab-workhorse

Formerly known as 'gitlab-git-http-server'.

v0.8.2 (not released yet)

Recognize more archive formats in git.SendArchive.

v0.8.1

Add Sentry (raven-go) for remote error tracking.

v0.8.0

Add JWT signed communication between gitlab-workhorse and gitlab-rails.

v0.7.11

Fix 'nil dereference' crash on Go 1.7 when parsing authBackend
parameter. Fix 'hard-wire backend host' crashes.

v0.7.10

Fix typo in metrics header name.

v0.7.9

Hard-wire backend host when using TCP.

v0.7.8

Send artifact zip file entries via the 'senddata' mechanism.

v0.7.7

Add the protocol used (HTTP) to each gitCommand call in order to check
for restricted protocol access on GitLab's side.

v0.7.6

Add the capability to inject `git format-patch` output.

v0.7.5

Add the capability to inject `git diff` output as HTTP response bodies
(@zj).

v0.7.4

Pass a timestamp when forwarding requests to Rails. Hopefully this
will give us insight into Unicorn queueing behavior.

v0.7.3

Revert 'buffer Git HTTP responses'. Set default listen socket
permissions to world read/writeable.

v0.7.2 DO NOT USE

Integrate with GOPATH during development (remove relative imports
etc.). Buffer Git HTTP responses so that we may return an error if the
local command fails early.

Update: the 'buffer Git HTTP responses' change in 0.7.2 is BAD, it
breaks shallow Git clone. Don't use 0.7.2!

v0.7.1

Set Content-Length (retrieved from Git) on raw blob data responses.

v0.7.0

Start using a 'v' prefix on the version string.

0.6.5

Inject 'git archive' data the same way as Git blob data.

0.6.4

Increase default ProxyHeadersTimeout to 5 minutes. Fix injecting raw
blobs for /api/v3 requetsts.

0.6.3

Add support for sending Git raw git blobs via gitlab-workhorse.

0.6.2

We now fill in missing directory entries in archize zip metadata
files; also some other minor changes.

0.6.1

Add support for generating zip artifacts metadata and serving single
files from zip archives.
