@@ -4,7 +4,8 @@ Formerly known as 'gitlab-git-http-server'.
 
 v0.8.2 (not released yet)
 
-Recognize more archive formats in git.SendArchive.
+Recognize more archive formats in git.SendArchive. Make 502 errors
+(failed proxy requests to Unicorn) easier to recognize in Sentry.
 
 v0.8.1
 
